# sync-services

./: .gitignore  Example output  README.md  Usage
.github/workflows/: compose-smoke.yml  cryptography.yml  explorer.yml  gateway.yml  general.yml  ledger.yml  ontology.yml  service-cryptography.yml  service-explorer.yml  workbench.yml
compose/contracts/: Dockerfile  README.md  contracts.scm  control.scm  demo.scm  docker-compose.yml  ledger.scm  record.scm  run.sh  test-contracts.scm  test.sh  test.txt
compose/file-system/: .gitignore  Dockerfile  README.md  docker-compose.yml  file-system.scm  ledger.scm  nginx.conf  notes.org  record.scm  run.sh
compose/general/: Dockerfile  README.md  docker-compose.yml  interface.scm  nginx.conf  run.sh
compose/ledger/: Dockerfile  README.md  docker-compose.yml  nginx.conf  run.sh  source.scm
compose/notary/: README.md  docker-compose.yml  nginx.conf  run.sh  source.scm
compose/ontology/: Dockerfile  README.md  docker-compose.yml  nginx.conf  run.sh
mcp_interfaces/: .mcphost.yml  README
mcp_interfaces/ledger/: package-lock.json
mcp_interfaces/ontology/: package.json
services/cryptography/: Cargo.toml  Dockerfile  README.md
services/cryptography/src/: lib.rs  main.rs
services/cryptography/tests/: crypt_test.rs
services/explorer/: .env.example  Dockerfile  README.md  ai-spec.md  package.json  requirements.txt  service.py
services/fuse/: Dockerfile  notes.org  requirements.txt  run.sh  service.py  smb.conf
tests/: docker-compose.local-ui.yml  docker-compose.local.yml  smoke-compose.sh  up-compose.sh
(+37 files in other folders)
