[package]
name = "cryptography-service"
version = "1.0.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.22", features = ["derive"] }
crystals-dilithium = "1.0.0"
hex = "0.4.3"
pqcrypto = "0.17.0"
serde = { version = "1.0", features = ["derive"] }
[dependencies.rocket]
version = "0.5.1"
features = ["json"]
